<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.prismm</groupId>
    <artifactId>noconsolespam</artifactId>
    <version>1.4.2</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <minecraft.version>24w20a</minecraft.version>
        <fabric.version>0.15.11</fabric.version>
        <mappings>24w20a+build.1</mappings>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <loom.version>1.6.12</loom.version>
    </properties>

    <repositories>
        <repository>
            <id>fabric</id>
            <url>https://maven.fabricmc.net/</url>
        </repository>
        <repository>
            <id>modrinth</id>
            <url>https://api.modrinth.com/maven</url>
        </repository>
        <repository>
            <id>maven-central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>fabric-repo</id>
            <url>https://maven.fabricmc.net/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>net.fabricmc</groupId>
            <artifactId>fabric-loader</artifactId>
            <version>${fabric.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.22.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.22.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.fabricmc</groupId>
            <artifactId>intermediary</artifactId>
            <version>${minecraft.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.fabricmc</groupId>
                <artifactId>fabric-loom</artifactId>
                <version>${loom.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <minecraft>
                        <version>${minecraft.version}</version>
                    </minecraft>
                    <mappings>
                        <intermediary>
                            <version>${minecraft.version}</version>
                        </intermediary>
                        <yarn>
                            <version>${mappings}</version>
                        </yarn>
                    </mappings>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>